--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,6 +27,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentBottom="true"
+        android:layout_below="@+id/toolbar"
         android:orientation="vertical">
 
         <RelativeLayout
@@ -74,7 +75,7 @@
                 android:id="@+id/log_scroll"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@android:color/holo_blue_bright" />
+                android:background="@android:color/holo_blue_bright">
 
             <TextView
                 android:id="@+id/log_text"
@@ -83,6 +84,7 @@
                 android:padding="20dp"
                 android:textColor="@android:color/white"
                 android:textSize="14sp" />
+            </ScrollView>
         </android.support.design.widget.CoordinatorLayout>
 
     </LinearLayout>
