231. Add Line chart

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -63,6 +63,12 @@
 
             </LinearLayout>
 
+            <com.github.mikephil.charting.charts.LineChart
+                android:id="@+id/line_chart"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:visibility="gone"/>
+
         </RelativeLayout>
 
         <android.support.design.widget.CoordinatorLayout
@@ -85,6 +91,21 @@
                 android:textColor="@android:color/white"
                 android:textSize="14sp" />
             </ScrollView>
+
+            <android.support.design.widget.FloatingActionButton
+                android:id="@+id/fab"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="16dp"
+                android:clickable="true"
+                android:src="@mipmap/ic_menu"
+                android:backgroundTint="@android:color/holo_blue_dark"
+                app:borderWidth="0dp"
+                android:elevation="6dp"
+                app:layout_anchor="@id/log_scroll"
+                app:layout_anchorGravity="bottom|right|end"
+                />
+
         </android.support.design.widget.CoordinatorLayout>
 
     </LinearLayout>
